summary: NetApp 会定期更新 ONTAP REST API ，为您提供新功能，增强功能和错误修复。 
---
= ONTAP REST API 和自动化的新增功能
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
NetApp 会定期更新 ONTAP REST API ，为您提供新功能，增强功能和错误修复。


TIP: 您还应查看 https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508["《 ONTAP 发行说明》"^] 适用于追加信息、包括已知限制或问题。



== ONTAP 9.15.1.

ONTAP 9.15.1将继续扩展ONTAP REST API的功能。此版本的更新相对较小、有三个新端点支持一项新功能。

基于TLS的NFS:: 此功能提供了三个新端点。您可以通过问题描述这些API调用检索基于TLS的所有NFS接口、通过UUID检索特定接口以及更新TLS接口的配置属性。这些API调用共同提供了一组等效的 `vserver nfs tls interface` CLI命令。



CAUTION: 基于TLS的NFS在ONTAP 9.151中提供公开预览版。作为预览选项、使用ONTAP 9.15.1的生产工作负载不支持此功能。



== ONTAP 9.14.1

ONTAP 9.14.1版包含超过30个新的API调用、这些调用继续扩展ONTAP REST API的功能。这些端点支持多项新的ONTAP功能以及对现有功能的更新。此版本主要侧重于安全性增强功能、但也包括对NAS、QoS和性能指标的改进。

安全性:: ONTAP 9.14.1中引入了两项主要的安全功能。开放式授权(OAuth2.0)是一种基于令牌的框架、可用于限制对ONTAP存储资源的访问。您可以将其用于通过REST API访问ONTAP的客户端。可以使用任何ONTAP管理界面(包括REST API)执行配置。ONTAP 9.14.1版还支持Cisco Duo、可为SSH登录提供双因素身份验证。您可以将Duo配置为在ONTAP集群或SVM级别运行。除了这两项新功能之外、还添加了多个端点、以提高对密钥存储库的控制力。
FPolicy永久性存储:: FPolicy为ONTAP策略管理提供了一个平台。它为各种组件或元素(例如事件和策略引擎)提供了一个容器。现在、您可以使用REST API为ONTAP FPolicy配置和事件配置和管理永久性存储。每个SVM都可以有一个永久性存储、该存储可供SVM中的多个策略共享。
QoS选项:: 引入了两个端点、可用于检索和设置集群的QoS选项。例如、您可以为后台任务预留一定百分比的可用系统处理资源。
性能指标:: ONTAP维护有关系统运行特征的统计信息。此信息以表格和行组成的数据库格式显示。在ONTAP 9.14.1中、还会在多个资源类别中添加其他指标数据、包括光纤通道、iSCSI、LUN和NVMe。这些附加指标数据继续使ONTAP REST API与Data ONTAP API (ONTAPI或ZAPI)更接近。
其他增强功能:: 根据您的环境、还有一些其他增强功能可能会很有用。这些新的端点改进了对SAN启动程序的访问、并控制了主机缓存设置、还支持访问各个AutoSupport消息。




== ONTAP 9.13.1

ONTAP 9.13.1通过20多个新的API调用不断扩展ONTAP REST API的功能。这些端点支持新的ONTAP 功能以及对现有功能的增强功能。此版本重点改进了安全性、资源管理、增强的SVM配置选项和性能指标。

资源标记:: 您可以使用标记对REST API资源进行分组。您可以执行此操作来关联特定项目或组织组中的相关资源。使用标记有助于更有效地组织和跟踪资源。
一致性组:: ONTAP 9.13.1会继续扩展性能计数器数据的可用性。现在、您可以访问此类统计信息来跟踪一致性组的历史性能和容量。此外、还提供了一些增强功能、可用于配置和管理一致性组之间的父子关系。
每个SVM的DNS配置:: 现有DNS端点已进行扩展、可对单个SVM执行DNS域和服务器配置。
EMS角色配置:: 现有的EMS支持功能已进行扩展、可用于管理角色以及分配给这些角色的访问控制配置。这样、便可根据角色配置限制或筛选事件和消息。