@@ -44,7 +44,7 @@ summary: 您可以使用这些 API 调用来管理集群和 SVM 的 CIFS 和 NFS
 您可以显示有关集群的NetBIOS连接的信息。详细信息包括IP地址和已注册的NetBIOS名称。此信息可帮助您解决名称解析问题。此资源类型是在ONTAP 9.11.1中引入的。
 
 .CIFS 服务
-CIFS 服务器的核心配置。此资源类型是在 ONTAP 9.6 中引入的，并在 ONTAP 9.7 中进行了更新。
+CIFS 服务器的核心配置。此资源类型是在 ONTAP 9.6 中引入的，并在 ONTAP 9.7 和 9.15 中进行了更新。
 
 .CIFS会话文件
 您可以根据多个筛选选项检索CIFS会话的打开文件列表。此资源类型是在ONTAP 9.11.1中引入的。
